Suppression de tous les chemin vers la page d'accueil Ajout favicon On ne peut éditer le jour d'occurence L'appli apparait sous le nom FPLC (faispeterlescroissants)

--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -32,6 +32,10 @@
 		<link rel="stylesheet" type="text/css" href="/croissants/css/xeditable.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
 		
+		<!-- favicon -->
+		<link rel="shortcut icon" href="/croissants/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/croissants/favicon.ico" type="image/x-icon">
+		
 		<!-- Ressources externes -->
 		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 		
@@ -48,15 +52,15 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand navLink" href="/croissants/views/croissants.html#/accueilView">Cycles</a>
+				<a class="navbar-brand navLink" href="/croissants/views/croissants.html#/groupesView">FPLC</a>
 				
 			</div>
 			
 			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
+				<!-- <ul class="nav navbar-nav">
 					<li><a href="/croissants/views/croissants.html#/groupesView">Groupes</a></li>
 					
-				</ul>
+				</ul>-->
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href=""><i class="fa fa-user"></i></a></li>
 					<li><a href="" ng-click="seDeconnecter()">Deconnexion</a></li>
