--- a/WebContent/views/guest.html
+++ b/WebContent/views/guest.html
@@ -26,6 +26,10 @@
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap-theme.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
 		
+		<!-- favicon -->
+		<link rel="shortcut icon" href="/croissants/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/croissants/favicon.ico" type="image/x-icon">
+		
 		<!-- Ressources externes -->
 		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 		
