--- a/WebContent/views/inscription.html
+++ b/WebContent/views/inscription.html
@@ -38,7 +38,11 @@
 		<div class="form-group">
 		    <div class="col-sm-offset-4 col-sm-8 has-spinner">
 		      <button type="submit" class="btn btn-primary has-spinner {{spinnerClass}}" ng-click="creerUtilisateur()">
-		      	<span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>S'inscrire à Cycles
+		      	<span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>S'inscrire
+		      </button>
+		      <!-- TODO -->
+		       <button type="submit" class="btn btn-warning has-spinner {{spinnerClass}}" ng-click="">
+		      	<span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>Retour
 		      </button>
 		    </div>
 	  	</div>
