Ajout des petits blabla dans les pages "creer groupe" et "rejoindre groupe".

--- a/WebContent/views/editerGroupe.html
+++ b/WebContent/views/editerGroupe.html
@@ -5,7 +5,7 @@
 			<i class="fa fa-users logo-titre"></i>{{titrePage}} groupe
 		</h1>
 	</div>
-	<div class="bottom-space">Petit blabla....</div>
+	<div class="bottom-space">Une évènement récurrent ? Créez un groupe et invitez-y tous les participants afin de ne plus jamais oublier à qui est le tour !</div>
 
 
 	<form novalidate class="form-horizontal" name="groupeForm">
