--- a/WebContent/views/rejoindreGroupe.html
+++ b/WebContent/views/rejoindreGroupe.html
@@ -5,7 +5,7 @@
 			<i class="fa fa-plus-circle logo-titre"></i>Rejoindre un groupe
 		</h1>
 	</div>
-	<div class="bottom-space">Petit blabla....</div>
+	<div class="bottom-space">Il faut se lancer ! Rejoindre un groupe, c'est s'assurer que l'évènement récurrent ne sera jamais oublié par la personne à qui c'est le tour.</div>
 
 
 	<form novalidate class="form-horizontal" name="groupeForm">
