--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -62,7 +62,7 @@
 					
 				</ul>-->
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href=""><i class="fa fa-user"></i></a></li>
+					<li><a href=""><i class="fa fa-user" style="margin-right:5px;"></i>{{utilisateur.nom | limitTo: 8 }}</a></li>
 					<li><a href="" ng-click="seDeconnecter()">Deconnexion</a></li>
 				</ul>
 			</div>
