--- a/WebContent/views/inscription.html
+++ b/WebContent/views/inscription.html
@@ -41,7 +41,7 @@
 		      	<span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>S'inscrire
 		      </button>
 		      <!-- TODO -->
-		       <button type="submit" class="btn btn-warning has-spinner {{spinnerClass}}" ng-click="">
+		       <button type="submit" class="btn btn-warning has-spinner {{spinnerClass}}" ng-click="goToLogin()">
 		      	<span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>Retour
 		      </button>
 		    </div>
