Correction du texte dans l'IHM d'inscription.

--- a/WebContent/views/inscription.html
+++ b/WebContent/views/inscription.html
@@ -1,7 +1,7 @@
 <!-- Formulaire de creation de compte -->
 <div class="center-div">
 	<h1><i class="fa fa-play-circle logo-titre"></i></i>Creer un compte</h1>
-	Cycles est une application de gestion de périodicité (rappels automatique à certains évènements) pour des groupes de personnes. Cette application nécessite une connexion préalable des utilisateurs.
+	<b>"Fais péter les croissants"</b> est une application de gestion de périodicité (rappels automatique à certains évènements) pour des groupes de personnes. Cette application nécessite une connexion préalable des utilisateurs.
 	<div class="bottom-space"></div>
 	<div ng-show="inscriptionOk">Merci <b>{{user.nom}}</b>, votre inscription a bien été prise en compte.
 	<div class="bottom-space"></div>
